fix the white space at the bottom of the page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,7 @@ $transition-time: 0.5s;
 
 html,
 body {
-  height: 100%;
+  // height: 100%;
   margin: 0;
   scroll-behavior: smooth;
 }
@@ -33,6 +33,7 @@ body {
   font-family: $font-title, Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .header {
@@ -46,6 +47,7 @@ body {
     justify-content: space-around;
     padding: 1em 3em;
     box-shadow: 0 2px 3px lighten($clr-dark, 20%);
+    flex: 0;
 
     div {
         display: flex;
@@ -174,8 +176,7 @@ body {
 }
 
 main {
-  // min-height & flex setup to have the footer stick to the bottom
-  min-height: 100%;
+  // min-height: 100%;
   flex: 1 0 auto;
   z-index: -10;
   // here below goes the rest of main
@@ -241,7 +242,10 @@ footer {
 	flex-shrink: 0;
 	position: relative;
 	top: 100%;
-	z-index: -1;
+  z-index: -1;
+  flex: 0;
+  margin-top: 15rem;
+  margin-bottom: -2rem;
 
 	.socialMed {
 		font-size: 3rem;
